# selfcar_2020_ws

./: README.md
SC_Control/src/: main.cpp
Sim_path_tracking/: CMakeLists.txt  package.xml
Sim_path_tracking/src/: Sim_path_tracking.cpp  Sim_path_tracking_only_lane.cpp  Sim_path_tracking_ver_0716.cpp  main.cpp  main_lane.cpp  ochang_Sim_path_tracking.cpp
ebimu_driver/: CMakeLists.txt  package.xml
ebimu_driver/launch/: ebimu_driver.launch
ebimu_driver/src/: ebimu.cpp  ebimu_node.cpp  test.cpp
global_path_planner/launch/: kcity_parking_tfLight_gp_final.launch  ochang_gp_only.launch
global_path_planner/map_data/: Signal_Stop.yaml  ochang_region_map.yaml  region_map_20.yaml
global_path_planner/path_data/: 2020_final_path0819.txt  2020_final_path0909.txt  2020_final_path0920.txt  ochang2020_10_24.txt  ochangHalf.txt  ochangLongPathUTM.txt  ochang_testpath1.txt  ochang_testpath2.txt
global_path_planner/src/: local_costmap.cpp  ochang_local_costmap.cpp  pathPlanner.cpp
localizer/: CMakeLists.txt  package.xml
localizer/launch/: fusion.launch  localizer.launch
localizer/rviz/: view_.rviz
localizer/src/: gnss_localizer.cpp  localizer.cpp  localizer_node.cpp  test.cpp
morai_msgs/: CMakeLists.txt  package.xml
morai_msgs/msg/: CtrlCmd.msg  ERP42Info.msg  EgoVehiclePosition.msg  EgoVehicleStatus.msg  EgoVehicleVelocity.msg  VelPlot.msg  (+8 more)
parking_mission/: CMakeLists.txt
pub/: CMakeLists.txt  package.xml
rospy/: package.xml
signal_transfer/: CMakeLists.txt  package.xml
sub/: CMakeLists.txt  package.xml
velodyne_process/: CMakeLists.txt  package.xml
(+40 files in other folders)
